--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "with-tailwindcss",
+  "name": "krane-ui",
   "version": "1.0.0",
   "scripts": {
     "dev": "next",
@@ -8,7 +8,7 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
-    "next": "^9.2.0",
+    "next": "^9.4.4",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "swr": "^0.2.3"
