--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
-    "moment": "^2.27.0",
     "next": "^9.4.4",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-scripts": "^3.4.1",
     "swr": "^0.2.3"
   },
   "devDependencies": {
