--- a/.github/workflows/publish_docker.yaml
+++ b/.github/workflows/publish_docker.yaml
@@ -1,11 +1,22 @@
 name: publish-docker
 
 on:
-  push:
-    branches:
-      - master
+  release:
+    types:
+      - created
 
 jobs:
+  # Set release version
+  version:
+      name: Set release version
+      runs-on: ubuntu-latest
+      outputs:
+        release-version: ${{ steps.release-version-step.outputs.RELEASE_VERSION }}
+      steps:
+        - id: release-version-step
+          run: echo "::set-output name=RELEASE_VERSION::${GITHUB_REF#refs/tags/}"
+        
+  # Build docker image and publish to registry:
   publish-to-docker:
     runs-on: ubuntu-latest
     steps:
@@ -15,5 +26,7 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
           repository: biensupernice/krane-ui
-          tags: latest
-          tag_with_sha: true
+          tags: latest, ${{ env.RELEASE_VERSION }}
+          build_args: VERSION=${{ env.RELEASE_VERSION }}
+        env: 
+            RELEASE_VERSION: ${{ needs.version.outputs.release-version }}
