--- a/.github/workflows/publish_docker.yaml
+++ b/.github/workflows/publish_docker.yaml
@@ -15,6 +15,11 @@ jobs:
       steps:
         - id: release-version-step
           run: echo "::set-output name=RELEASE_VERSION::${GITHUB_REF#refs/tags/}"
+          
+        - name: Print release version
+          run: echo "Publishing krane-ui version ${{ env.RELEASE_VERSION }}"
+          env:
+            RELEASE_VERSION: ${{ steps.release-version-step.outputs.RELEASE_VERSION }}
         
   # Build docker image and publish to registry:
   publish-to-docker:
